<resources>
    <string name="app_name">MyTicketSaya</string>

    <string name="btn_sign_in">Sign In</string>
    <string name="slogan">Wisata Jadi Lebih Asik</string>
    <string name="btn_new_account">New Account</string>
    <string name="username_label">Username</string>
    <string name="password_label">password</string>
    <string name="email_label">Email Address</string>
    <string name="nama_label">nama</string>
    <string name="bio_label">bio</string>
    <string name="editProfile_editProfile">Edit Profile</string>
    <string name="editProfile_subTitleDesc">We highly suggest you to   use the correct information</string>
    <string name="all_nama">Nama</string>
    <string name="all_yourPassion">Your Passion</string>
    <string name="all_username">Username</string>
    <string name="all_Password">Password</string>
    <string name="all_emailaddress">Email Address</string>
    <string name="all_plus">+</string>
    <string name="all_saveprofile">Save Profile</string>
    <string name="home_mydashboard">My Dashboard</string>
    <string name="home_namaprofile">Kunto Mustiko</string>
    <string name="home_descriptionprofile">Programming</string>
    <string name="home_balance">$ 240</string>
    <string name="home_mainmenu">Main Menus</string>
    <string name="home_mainmenudesc">Explore the beutiful island</string>
    <string name="home_menu_content_pisa">Pisa</string>
    <string name="home_menu_content_torri">Torri</string>
    <string name="home_menu_content_pagoda">Pagoda</string>
    <string name="home_menu_content_borobudur">Borobudur</string>
    <string name="home_menu_content_sphinx">Sphinx</string>
    <string name="home_menu_content_monas">Monas</string>
    <string name="home_title_scroll_horizontal">Ticket Tips</string>
    <string name="home_subtitle_scroll_horizontal">Learn It for Many Benefits</string>
    <string name="nameprofile_myprofileact">Angga Rezky</string>
    <string name="myprofileact_myticketmenutitle">My Ticket</string>
    <string name="myprofileact_myticketmenusubtitle">Explore beatiful more</string>
    <string name="myprofileact_menarapisa">Menara Pisa</string>
    <string name="myprofileact_pisacityitaly">Pisa City Italy</string>
    <string name="myprofileact_jmlticket">2 Tcikets</string>
    <string name="all_signout">Sign out</string>
    <string name="all_editprofile">Edit Profile</string>
    <string name="succesticketact_subtitle">Anda berhasil membeli ticket  dan selamat berlibur</string>
    <string name="succesbuyticketact_viewticket">View Ticket</string>
    <string name="succesbuyticketact_mydashboard">My Dashboard</string>
    <string name="ticketdetailact_title">Menara Pisa</string>
    <string name="ticketdetailact_location">Pisa, Italy</string>
    <string name="ticketdetailact_menu_information">Information</string>
    <string name="ticketdetailact_menu_subinformation">Knowing before your travel</string>
    <string name="registerone_title">Create Account</string>
    <string name="registeroneact_subtitle">Please fill up the forms below  for informations</string>
    <string name="registertwoact_subtitle">Let the world knows yourself\n  more better and ever</string>
    <string name="registertwoact_title">Selfie Time</string>
    <string name="all_createnewaccount">Create New Account</string>
    <string name="ticketcheckoutact_totalharga">Total Price</string>
    <string name="ticketcheckoutact_mybalance">$326</string>
    <string name="ticketcheckoutact_uangkamudesc">Your current balance</string>
    <string name="ticketcheckoutact_menu_title">Ticket Details</string>
    <string name="ticketcheckoutact_menu_subtitle">Check ticket by amount</string>
    <string name="ticketcheckoutact_title">Buy Ticket</string>
</resources>
