<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/bluePrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_homeact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/mlight"
                android:text="@string/home_mydashboard"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_view_circle_pict"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title" />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:id="@+id/iv_homeact_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title">

                <ImageView
                    android:id="@+id/pict_homeact_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_nopic" />

            </com.github.florent37.shapeofview.shapes.CircleView>

            <TextView
                android:id="@+id/tv_homeact_title_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mmedium"
                android:text="@string/home_namaprofile"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_homeact_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mlight"
                android:text="@string/home_descriptionprofile"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/iv_homeact_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title_username" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/mmedium"
                android:text="@string/home_balance"
                android:textColor="@color/greenPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="30dp"
                android:paddingRight="24dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:text="@string/home_mainmenu"
                    android:textColor="@color/blackPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/home_mainmenudesc"
                    android:textColor="@color/grayPrimary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#EDEDED" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/ll_homeact_pisa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_homeact_pisa"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_pisa" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:text="@string/home_menu_content_pisa"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_homeact_torri"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_homeact_torri"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_torri" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:text="@string/home_menu_content_torri"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_homeact_pagoda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_homeact_pagoda"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_pagoda" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:text="@string/home_menu_content_pagoda"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_homeact_borubudur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/iv_homeact_borobudur"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_borobudur" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:text="@string/home_menu_content_borobudur"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_homeact_sphinx"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_homeact_sphinx"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_sphinx" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:text="@string/home_menu_content_sphinx"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_homeact_monas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_homeact_monas"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_monas" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:text="@string/home_menu_content_monas"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_homeact_title_scrollhorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/mregular"
                android:text="@string/home_title_scroll_horizontal"
                android:textColor="@color/blackPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tv_homeact_subtitle_scrollhorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:text="@string/home_subtitle_scroll_horizontal"
                android:textColor="@color/grayPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_title_scrollhorizontal" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="120dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_homeact_subtitle_scrollhorizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="227dp"
                        android:layout_height="98dp"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/item_one" />

                    <ImageView
                        android:layout_width="227dp"
                        android:layout_height="98dp"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/item_two" />
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>